--- a/symbols.yaml
+++ b/symbols.yaml
@@ -45,21 +45,21 @@ punctuator:
     '{' : [ 『, 〖, ｛ ]
     '}' : [ 』, 〗, ｝ ]
   half_shape:
-    ',' : { commit: ， }
-    '.' : { commit: 。 }
+    ',' : { commit: ',' }
+    '.' : { commit: ['.','。'] }
     '<' : [ 《, 〈, «, ‹, ˂, ˱ ]
     '>' : [ 》, 〉, », ›, ˃, ˲ ]
     '/' : [  '/', ÷ ]
-    '?' : { commit: ？ }
-    ';' : { commit: ； }
-    ':' : { commit: ： }
+    '?' : { commit: '?' }
+    ';' : { commit: ';' }
+    ':' : { commit: ':' }
     '''' : { pair: [ '‘', '’' ] }
     '"' : { pair: [ '“', '”' ] }
     '\' : ['、', '\' ]
     '|' : [ ·, ・, '|', ｜, '§', '¦', '‖', ︴ ]
     '`' : [ '`', ‵, ‶, ‷, ′, ″, ‴, ⁗ ]
     '~' : [ '~', ～, ˜, ˷, ⸯ, ≈, ≋, ≃, ≅, ≇, ∽, ⋍, ≌, ﹏, ﹋, ﹌, ︴ ]
-    '!' : { commit: ！ }
+    '!' : { '!' }
     '@' : [ '@', ©, ®, ℗ ]
     '#' : [ '#', № ]
     '%' : [ '%', ％, '°', '℃', ‰, ‱, ℉, ℅, ℆, ℀, ℁, ⅍ ]
@@ -67,12 +67,12 @@ punctuator:
     '^' : { commit: …… }
     '&' : '&'
     '*' : [ '*', ＊, ·, ・, ×, ※, ❂, ⁂, ☮, ☯, ☣ ]
-    '(' : （
-    ')' : ）
+    '(' : '('
+    ')' : ')'
     '-' : '-'
-    '_' : ——
+    '_' : '_'
     '+' : '+'
-    '=' : [ '=', 々, 〃 ]
+    '=' : '='
     '[' : [ 「, 【, 〔, ［, 〚, 〘 ]
     ']' : [ 」, 】, 〕, ］, 〛, 〙 ]
     '{' : [ 『, 〖, ｛ ]
