--- a/symbols.yaml
+++ b/symbols.yaml
@@ -59,7 +59,7 @@ punctuator:
     '|' : [ ·, ・, '|', ｜, '§', '¦', '‖', ︴ ]
     '`' : [ '`', ‵, ‶, ‷, ′, ″, ‴, ⁗ ]
     '~' : [ '~', ～, ˜, ˷, ⸯ, ≈, ≋, ≃, ≅, ≇, ∽, ⋍, ≌, ﹏, ﹋, ﹌, ︴ ]
-    '!' : { '!' }
+    '!' : { commit: '!' }
     '@' : [ '@', ©, ®, ℗ ]
     '#' : [ '#', № ]
     '%' : [ '%', ％, '°', '℃', ‰, ‱, ℉, ℅, ℆, ℀, ℁, ⅍ ]
@@ -87,7 +87,7 @@ punctuator:
     '/sz': [ ⚀, ⚁, ⚂, ⚃, ⚄, ⚅ ]
     '/pk': [ ♠, ♥, ♣, ♦, ♤, ♡, ♧, ♢ ]
 #表情
-    '/bq': [ ☻, ☺, ☹ ]
+    '/bq': [ ☻, ☺, ☹ , 😘, ❌, ✅, 🐂, 👴]
 #天氣
     '/tq': [ ☀, ☁, ⛅, ⛈, ⛆, ☂, ☔, ☃, ⛄, ⛇ ]
 #音樂
@@ -316,3 +316,11 @@ punctuator:
 #韓文+圈/弧
     '/hwq': [ ㉠, ㉡, ㉢, ㉣, ㉤, ㉥, ㉦, ㉧, ㉨, ㉩, ㉪, ㉫, ㉬, ㉭, ㉮, ㉯, ㉰, ㉱, ㉲, ㉳, ㉴, ㉵, ㉶, ㉷, ㉸, ㉹, ㉺, ㉻, ㉼, ㉽, ㉾, ㉿ ]
     '/hwh': [ ㈀, ㈁, ㈂, ㈃, ㈄, ㈅, ㈆, ㈇, ㈈, ㈉, ㈊, ㈋, ㈌, ㈍, ㈎, ㈏, ㈐, ㈑, ㈒, ㈓, ㈔, ㈕, ㈖, ㈗, ㈘, ㈙, ㈚, ㈛, ㈜, ㈝, ㈞ ]
+#縮寫 -> 全稱
+    '/arrow': *arrow
+    '/math': *math
+    '/money': *money
+    '/googlecommonsymbol': *googlecommonsymbol
+    '/googlemathsymbol': *googlemathsymbol
+    '/unit': *unit
+    '/biaoqing': *biaoqing
