--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -2,3 +2,10 @@ patch:
   menu/page_size: 9
   schema_list:
     - schema: luna_pinyin
+  ascii_composer/good_old_caps_lock: true
+  ascii_composer/switch_key:
+    Caps_Lock: commit_code
+    Shift_L: noop
+    Shift_R: noop
+    Control_L: commit_code
+    Control_R: commit_code
