--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -1,14 +1,26 @@
 patch:
-  engine/translators/@6: lua_translator@date_translator
-  engine/translators/@7: lua_translator@time_translator
+  engine/translators/@1: lua_translator@date_translator
+  engine/translators/@2: lua_translator@time_translator
+
   
+  engine/translators/@3: table_translator@custom_phrase
+  "schema/dependencies/@next": easy_en
+  # 載入翻譯英文的碼表翻譯器，取名爲 english
+  "engine/translators/@next": table_translator@english
+  # english 翻譯器的設定項
+  english: 
+    dictionary: easy_en
+    spelling_hints: 9
+    enable_completion: true
+    enable_sentence: false
+    initial_quality: -1
+  # end
+
+  'speller/algebra/@before 0': xform/^([b-df-hj-np-tv-z])$/$1_/ # 实现模糊简拼 很关键
   'speller/algebra':
     #- erase/^xx$/ 
     - derive/^([zcs])h/$1/             # zh, ch, sh => z, c, s
     - derive/^([zcs])([^h])/$1h$2/     # z, c, s => zh, ch, sh
-    # 模糊音定義先於簡拼定義，方可令簡拼支持以上模糊音
-    - abbrev/^([a-z]).+$/$1/           # 簡拼（首字母）
-    - abbrev/^([zcs]h).+$/$1/          # 簡拼（zh, ch, sh）
 
     # 以下是一組容錯拼寫，《漢語拼音》方案以前者爲正
     - derive/^([nl])ve$/$1ue/          # nve = nue, lve = lue
@@ -18,11 +30,29 @@ patch:
     - derive/iu$/iou/                  # jiu = jiou,
 
     # 自動糾正一些常見的按鍵錯誤
-    - derive/([aeiou])ng$/$1gn/        # dagn => dang 
+    - derive/([aeiou])ng$/$1gn/           # dagn => dang
+    - derive/([aeiou])ng$/n$1g/           # dnag => dang
     - derive/([dtngkhrzcs])o(u|ng)$/$1o/  # zho => zhong|zhou
-    - derive/ong$/on/                  # zhonguo => zhong guo
-    - derive/ao$/oa/                   # hoa => hao
-    - derive/([iu])a(o|ng?)$/a$1$2/    # tain => tian
+    - derive/ong$/on/                     # zhonguo => zhong guo
+    - derive/ao$/oa/                      # hoa => hao
+    - derive/jie$/jei/                    # jei => jie
+    - derive/jia$/jai/                    # jai => jia
+    - derive/i$/ii$2/                       # ii => i
+    - derive/lai$/lia/                    # lia => lai
+    - derive/wei$/wie/                    # wie => wei
+    - derive/iao$/aio/                    # baio => biao
+    - derive/iao$/iiao/                   # biiao => biao
+    - derive/unag$/uang/                  # hunag => huang
+    - derive/([iu])a(o|ng?)$/a$1$2/       # tain => tian
+
+    # 韻母部份
+    - derive/^([bpmf])eng$/$1ong/      # meng = mong, ...
+    - derive/([ei])n$/$1ng/            # en => eng, in => ing
+    - derive/([ei])ng$/$1n/            # eng => en, ing => in
+
+    # 模糊音定義先於簡拼定義，方可令簡拼支持以上模糊音
+    - abbrev/^([a-z]).+$/$1/           # 簡拼（首字母）
+    - abbrev/^([zcs]h).+$/$1/          # 簡拼（zh, ch, sh）
 
   translator/enable_user_dict: true
   translator/dictionary: luna_pinyin.custom
@@ -42,13 +72,12 @@ patch:
 #        - GBKE
 #        - UTF-8
 #      reset: 1
-#  custom_phrase:
-#    db_class: stabledb
-#    dictionary: ""
-#    enable_completion: false
-#    enable_sentence: false
-#    initial_quality: 1
-#    user_dict: custom_phrase 
-
+  # custom_phrase:
+  #   dictionary: ""
+  #   user_dict: custom_phrase
+  #   db_class: stabledb
+  #   enable_completion: false
+  #   enable_sentence: false
+  #   initial_quality: 1
  
  
