--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -2,10 +2,11 @@ patch:
   menu/page_size: 9
   schema_list:
     - schema: luna_pinyin
+    #- schema: easy_en
   ascii_composer/good_old_caps_lock: true
   ascii_composer/switch_key:
     Caps_Lock: commit_code
     Shift_L: noop
     Shift_R: noop
-    Control_L: commit_code
-    Control_R: commit_code
+    Control_L: noop 
+    Control_R: noop
