--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,6 +1,6 @@
 patch:
   schema_list:
-    #- schema: double_pinyin_flypy # 小鹤双拼
+    - schema: double_pinyin_flypy # 小鹤双拼
     - schema: luna_pinyin # 全拼
     # - schema: double_pinyin # 自然码
   switcher/hotkeys:
@@ -15,7 +15,7 @@ patch:
   ascii_composer: # 设置caps、shift、control等键的作用
     good_old_caps_lock: true # 若为true，caps只切换大小写
     switch_key:
-      Shift_L: noop
+      Shift_L: commit_code
       Shift_R: noop
       Control_L: noop
       Control_R: noop
