--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -42,20 +42,9 @@ use_preset_vocabulary: true
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 
 import_tables:
-  # - luna_pinyin
-  # - luna_pinyin.xiandaihanyu
-  # - luna_pinyin.chengyusuyu
-  # - luna_pinyin.popular
-  # - essay
-  # - luna_pinyin.computer
-  # - luna_pinyin.kaifa
-  # - luna_pinyin.poetry
-  # - luna_pinyin.chat
-  # - luna_pinyin.place
-  # - luna_pinyin.shopping
-  # - luna_pinyin.website
-  # - luna_pinyin.mingxing
-  # - zhwiki
+  - luna_pinyin
+  - essay
+  - zhwiki
   - dict/clover/clover.base
   - dict/clover/clover.phrase
   - dict/luna_pinyin.tanzi_math 
